li link break fixed, overlap issue fixed

--- a/styles/sass/Partials/_header.scss
+++ b/styles/sass/Partials/_header.scss
@@ -1,28 +1,27 @@
-@import "mixins.scss";
+@import 'mixins.scss';
 
 header {
-    height: 100vh;
-    background-image: url(../assets/unsplashBackgroundCompressed.jpg);
-    box-shadow: inset 0 0 0 2000px rgba(8, 7, 16, 0.7);
-    background-size: cover;
+  height: 100vh;
+  background-image: url(../assets/unsplashBackgroundCompressed.jpg);
+  box-shadow: inset 0 0 0 2000px rgba(8, 7, 16, 0.7);
+  background-size: cover;
+  z-index: 1;
 
-    img {
-        position: absolute;
-        max-width: 450px;
-        align-self: flex-end;
-        opacity: 0.7;
+  img {
+    position: absolute;
+    max-width: 450px;
+    align-self: flex-end;
+    opacity: 0.7;
 
-        @include mid {
-            display: none;
-        }
+    @include mid {
+      display: none;
     }
+  }
 }
 
 .headerSection {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
-
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
