--- a/styles/sass/Partials/_nav.scss
+++ b/styles/sass/Partials/_nav.scss
@@ -20,6 +20,7 @@
     opacity: 1;
     color: white;
     display: block;
+    pointer-events: all;
   }
   ul {
     display: flex;
@@ -65,6 +66,7 @@
   font-size: 3rem;
   width: 50px;
   display: none;
+  z-index: 3;
 
   @include mid {
     display: block;
